[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
description = "DMX512 lighting protocol support"
documentation = "https://docs.rs/dmx"
license = "MIT"
name = "dmx"
repository = "https://github.com/mbr/dmx-rs"
version = "0.2.1"
edition = "2018"

[dependencies]
serial = "0.4.0"
lazy_static = "^1.4"
